--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "nikolay-oskin/contents",
-    "description": "Contents generator for posts, news, articles or any other text",
+    "description": "Table of contents generator Laravel package for posts, news, articles or any other text",
+    "keywords": ["laravel", "laravel-contents", "table-of-contents", "contents"],
     "authors": [
         {
             "name": "Nikolay Oskin",
@@ -22,7 +23,7 @@
     },
     "require": {
         "php": "^7.0",
-        "illuminate/support": "5.8.*"
+        "illuminate/support": "5.5.*"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.4"
