updating composer.json

--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
     "minimum-stability": "stable",
     "autoload-dev": {
         "psr-4": {
+            "NikolayOskin\\Contents\\": "src/",
             "NikolayOskin\\PackageTest\\Tests\\": "tests"
         }
     },
