--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,4 @@ before_script:
   - travis_retry composer install --prefer-source --no-interaction --dev
 
 script:
-  - phpunit ./tests
+  - phpunit --configuration phpunit.xml
