--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,8 @@
         }
     },
     "require": {
-        "php": "^7.0",
-        "illuminate/support": "5.5.*"
+        "php": "^7.3|^8.0",
+        "illuminate/support": "^5|^6|^7|^8|^9"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.4"
